tests/private/private.exp
Error --------------------------------------------------------- private.js:11:27

Cannot get `this._x` because property `_x` is missing in `B`.

Error: private.js:11
 11:     var _x: string = this._x;
                               ^^ Cannot get `this._x` because property `_x` is missing in `B` [1].
  References:
    8: class B extends A {
             ^ [1]: `B`


Found 1 error
